# terraform-aws-agentcore

./: .checkov.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  locals.tf  main.tf  outputs.tf  plan_mod.md  usage_instructions.md  variables.tf  versions.tf
.github/workflows/: ci.yml  lock.yml  pr-title.yml  pre-commit.yml  release.yml  stale.yml
_modules/ecr/: README.md  main.tf  variables.tf
_modules/iam/: README.md  locals.tf  main.tf  outputs.tf  variables.tf
_modules/security_group/: README.md  locals.tf  main.tf  variables.tf
examples/agent-with-memory/: Dockerfile  README.md  invoke_agent.py  pyproject.toml
examples/basic/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
examples/private-vpc/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
examples/strands-agent/: .gitignore  .trivyignore  Dockerfile  README.md  invoke_agent.py  main.tf  pyproject.toml
examples/strands-agent/src/strands_agent_example/: __init__.py  agent.py  server.py  tools.py
examples/strands-agent/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
modules/ecr/: README.md  build_image.sh  locals.tf  main.tf  outputs.tf
modules/iam/: README.md  locals.tf  variables.tf
modules/memory/: README.md  locals.tf  main.tf  outputs.tf  variables.tf
modules/security_group/: README.md  outputs.tf
wrappers/: README.md  main.tf
wrappers/ecr/: README.md  main.tf
wrappers/iam/: README.md  main.tf
wrappers/memory/: README.md  main.tf
(+9 files in other folders)
